// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkTableHeadCell should render correctly 1`] = `
<DocumentFragment>
  <th
    class="bpk-table__cell bpk-table__cell--head"
  >
    Heading
  </th>
</DocumentFragment>
`;

exports[`BpkTableHeadCell should render correctly with "alternate" 1`] = `
<DocumentFragment>
  <th
    class="bpk-table__cell bpk-table__cell--head-alternate"
  />
  <th>
    Skyscanner
  </th>
</DocumentFragment>
`;

exports[`BpkTableHeadCell should render correctly with arbitrary props 1`] = `
<DocumentFragment>
  <th
    class="bpk-table__cell bpk-table__cell--head"
    data-foo="bar"
    id="my-custom-id"
  />
  <th>
    Skyscanner
  </th>
</DocumentFragment>
`;

exports[`BpkTableHeadCell should render correctly with custom class 1`] = `
<DocumentFragment>
  <th
    class="bpk-table__cell bpk-table__cell--head my-custom-class"
  />
  <th>
    Skyscanner
  </th>
</DocumentFragment>
`;
